--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,11 @@
   display: flex;
   flex-direction: column;
 }
+.map{
+  position: relative!important;
+  height: 450px!important;
+  border-radius: 5px;
+  overflow: hidden;
+  box-shadow: 0 3px 15px rgba(35,35,35,.3);
+  border: 2px solid #494949;
+}
