--- a/src/less/style.less
+++ b/src/less/style.less
@@ -8,6 +8,19 @@
 	width: 100%;
 	margin: 0 auto;
 }
+#root{
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+}
+.map{
+	 position: relative!important;
+	 height: 450px!important;
+	 border-radius: 5px;
+	 overflow: hidden;
+	 box-shadow: 0 3px 15px rgba(35,35,35,.3);
+	 border: 2px solid #494949;
+}
 header, footer{
 	background: rgba(43, 43, 43, 0.95);
 	padding: 10px 0;
